<resources>
    <string name="app_name">FeedGO</string>
    <string name="title_searching">Search</string>
    <string name="title_reporting">Report</string>
    <string name="title_settings">Settings</string>
    <string name="hint_title">What is the report about?</string>
    <string name="hint_desc">Tell us more about it…</string>

    <string-array name="sp_entries">
        <item>-- Select a Category --</item>
        <item>Danger</item>
        <item>Interesting Place</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="submit_button_text">Check Report</string>
    <string name="submit_dialog_button_text">Done with Changes</string>
    <string name="text_change">Change</string>
    <string name="text_confirm">Confirm</string>
    <string name="change_button_text">Change Report</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="unknown_geofence_error">Unknown Error</string>
    <string name="geofence_not_available">Geofence Not Available</string>
    <string name="geofence_too_many_geofences">Geofence Limit Exceed</string>
    <string name="geofence_too_many_pending_intents">Too many panding intents</string>
    <string name="geofence_transition_invalid_type">Invalid Transition</string>
    <string name="geofence_transition_notification_text">Entered | Exited</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Transition</string>
    <string name="title_search_rad">Search Radius in Meters</string>
</resources>
