<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_searching">

    <fragment
        android:id="@+id/navigation_searching"
        android:name="sudo.cide.squad.fidobite.ui.searching.SearchingFragment"
        android:label="@string/title_searching"
        tools:layout="@layout/fragment_searching" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="sudo.cide.squad.fidobite.ui.reporting.ReportingFragment"
        android:label="@string/title_reporting"
        tools:layout="@layout/fragment_reporting" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="sudo.cide.squad.fidobite.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>