<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <EditText
        android:id="@+id/et_dialog_report_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="2"
        android:background="@null"
        android:fontFamily="monospace"
        android:hint="@string/hint_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="20sp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/et_dialog_report_desc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="3"
        android:background="@null"
        android:fontFamily="monospace"
        android:hint="@string/hint_desc"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:textSize="20sp"
        tools:ignore="LabelFor" />

    <Spinner
        android:id="@+id/sp_dialog_report_category"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="2"
        android:entries="@array/sp_entries"
        android:fontFamily="monospace"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/background_ok_button"
        android:text="@string/change_button_text" />

</LinearLayout>

