<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="100">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="10"
        app:cardCornerRadius="20dp">

        <EditText
            android:id="@+id/et_report_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@null"
            android:fontFamily="monospace"
            android:hint="@string/hint_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="30"
        app:cardCornerRadius="20dp">

        <EditText
            android:id="@+id/et_report_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@null"
            android:fontFamily="monospace"
            android:hint="@string/hint_desc"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="10"
        app:cardCornerRadius="20dp">

        <Spinner
            android:id="@+id/sp_report_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:entries="@array/sp_entries"
            android:fontFamily="monospace"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="10"
        app:cardCornerRadius="20dp">

        <Button
            android:id="@+id/btn_check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_ok_button"
            android:text="@string/submit_button_text" />

    </androidx.cardview.widget.CardView>

</LinearLayout>